# EAI-final-project

./: .coverage  .gitignore  README.md  camera_pos_adjust_plan.txt  pyproject.toml  test_cv2.py  test_logs.py  test_static_grasp.py
.agent/: CODE_CLEANUP_COMPLETED.md  CODE_CLEANUP_PLAN.md  COMPLETION_SUMMARY.md  METRICS_REFACTORING_SUMMARY.md  MODE_SPECIFIC_METRICS_GUIDE.md  PPO_TEST_FIX.md  RUNNER_TESTS_SUMMARY.md  TESTABILITY_DESIGN_GUIDE.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_SUMMARY.md  TEST_DIRECTORY_CLEANUP.md  TEST_FIXES_SUMMARY.md  UNIFIED_ROLLOUT_DESIGN.md  UNIFIED_ROLLOUT_IMPLEMENTATION.md
.agent/workflows/: fix-runner-missing-methods.md  refactor-make-env.md  refactor-roadmap.md  refactor-runner-train-method.md  refactor-so101-class-attrs.md  refactor-so101-logging.md  refactor-track1-config.md  refactor-track1-init-attrs.md  refactor-track1-rewards.md  refactor-wrapper-traversal.md
camera_calibration_results/: README.md
configs/: train.yaml  train_static_grasp.yaml
configs/control/: joint_target.yaml
configs/env/: static_grasp.yaml  track1.yaml
configs/obs/: dual_arm.yaml  single_arm.yaml
configs/reward/: lift.yaml  static_grasp.yaml
docs/: camera_tuning_guide.md  lerobot_training_guide.md  project_context_handoff.md  session_handoff.md  static_grasp_task.md  training_stabilization_report.md
scripts/: analyze_reward.py  benchmark_ppo.py  camera_overlay.py  camera_overlay_tunable.py  check_wrist_camera.py  debug_env_struct.py  eval.py  replay_track1_local.py  replay_trajectory.py  sample_poses_ik.py  sample_valid_poses.py  so101.py  track1_env.py  train.py  train_ppo.py  verify_obs_naming.py  verify_refactor.py  view_env.py  view_keyframes.py
scripts/agents/: __init__.py  so101.py
scripts/benchmarks/: benchmark_env_reset.py  benchmark_full_loop.py  benchmark_ppo.py
scripts/configs/: config.yaml  debug.yaml  train.yaml  train_lift.yaml  train_sort_left.yaml  train_stack.yaml  train_static_grasp.yaml
scripts/configs/control/: ee.yaml  joint.yaml
scripts/configs/env/: lift.yaml  sort.yaml  stack.yaml  static_grasp.yaml  track1.yaml
scripts/configs/obs/: single_arm.yaml  sort_left.yaml  stack.yaml
scripts/configs/reward/: lift.yaml  sort_left.yaml  stack.yaml  static_grasp.yaml
scripts/debug_tools/: camera_overlay.py  check_cube_physics.py  check_robot_joints.py  check_sapien_defaults.py  check_weights.py  debug_eval_action.py  debug_eval_grasp.py  debug_is_grasped.py  debug_obs_comparison.py  debug_obs_deep.py  debug_obs_keys.py  debug_obs_keys_actual.py  debug_obs_mapping.py  debug_policy_action.py  test_clipping.py  test_cudagraph_sync.py  test_gripper.py  verify_agent_fix.py  verify_friction.py  verify_obs_naming.py  verify_refactor.py
scripts/envs/: __init__.py  camera_processing.py  scene_builder.py  track1_env.py
scripts/tasks/: base.py  lift.py  sort.py  stack.py  static_grasp.py
scripts/tests/: README.md  conftest.py  demo_env.py  demo_robot.py  investigate_info.py  test_autoreset_logic.py  test_info_utils.py  test_popart.py  test_ppo_components.py  test_ppo_convergence.py  test_ppo_integration.py  test_ppo_unit.py  test_render_sync.py  test_runner_core.py  test_runner_metrics.py  test_runner_utils.py
scripts/training/: agent.py  common.py  config_utils.py  env_utils.py  info_utils.py  metrics_utils.py  ppo_utils.py  runner.py  runner_utils.py  value_normalization.py
scripts/utils/: camera_extrinsics_optimizer.py  extract_wrist_calibration_frames.py  sample_poses_ik.py  sample_valid_poses.py  split_video.py  view_camera.py  view_keyframes.py  wrist_camera_optimizer.py
tests/: __init__.py  test_metrics.py  test_task_handlers.py
