[project]
name = "eai-final-project"
version = "0.1.0"
description = "EAI Track1 PPO training and LeRobot diffusion baselines"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "EAI Team" }]
license = { text = "Proprietary" }
dependencies = [
  "absl-py==2.3.1",
  "annotated-types==0.7.0",
  "antlr4-python3-runtime==4.9.3",
  "anyio==4.12.0",
  "arm-pytorch-utilities==0.4.3",
  "asttokens==3.0.1",
  "certifi==2025.11.12",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "cloudpickle==3.1.2",
  "contourpy==1.3.2",
  "cycler==0.12.1",
  "dacite==1.9.2",
  "decorator==5.2.1",
  "docstring-parser==0.17.0",
  "exceptiongroup==1.3.1",
  "executing==2.2.1",
  "farama-notifications==0.0.4",
  "fast-kinematics==0.2.2",
  "filelock==3.20.1",
  "fonttools==4.61.1",
  "fsspec==2025.12.0",
  "gitdb==4.0.12",
  "gitpython==3.1.45",
  "gymnasium==0.29.1",
  "h11==0.16.0",
  "h5py==3.15.1",
  "hf-xet==1.2.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "huggingface-hub==1.2.3",
  "hydra-core==1.3.2",
  "idna==3.11",
  "imageio==2.37.2",
  "imageio-ffmpeg==0.6.0",
  "importlib-metadata==8.7.1",
  "ipython==8.37.0",
  "jedi==0.19.2",
  "jinja2==3.1.6",
  "kiwisolver==1.4.9",
  "lxml==6.0.2",
  "mani-skill==3.0.0b22",
  "markupsafe==3.0.3",
  "matplotlib==3.10.8",
  "matplotlib-inline==0.2.1",
  "mplib==0.1.1",
  "mpmath==1.3.0",
  "networkx==3.4.2",
  "numpy==2.2.6",
  "nvidia-cublas-cu12==12.8.4.1",
  "nvidia-cuda-cupti-cu12==12.8.90",
  "nvidia-cuda-nvrtc-cu12==12.8.93",
  "nvidia-cuda-runtime-cu12==12.8.90",
  "nvidia-cudnn-cu12==9.10.2.21",
  "nvidia-cufft-cu12==11.3.3.83",
  "nvidia-cufile-cu12==1.13.1.3",
  "nvidia-curand-cu12==10.3.9.90",
  "nvidia-cusolver-cu12==11.7.3.90",
  "nvidia-cusparse-cu12==12.5.8.93",
  "nvidia-cusparselt-cu12==0.7.1",
  "nvidia-ml-py==13.590.44",
  "nvidia-nccl-cu12==2.27.5",
  "nvidia-nvjitlink-cu12==12.8.93",
  "nvidia-nvshmem-cu12==3.3.20",
  "nvidia-nvtx-cu12==12.8.90",
  "omegaconf==2.3.0",
  "opencv-python==4.12.0.88",
  "orjson==3.11.5",
  "packaging==25.0",
  "pandas==2.3.3",
  "parso==0.8.5",
  "pexpect==4.9.0",
  "pillow==12.0.0",
  "platformdirs==4.5.1",
  "prompt-toolkit==3.0.52",
  "protobuf==6.33.2",
  "psutil==7.1.3",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "pyarrow==22.0.0",
  "pydantic==2.12.5",
  "pydantic-core==2.41.5",
  "pygments==2.19.2",
  "pyparsing==3.2.5",
  "pyperclip==1.11.0",
  "python-dateutil==2.9.0.post0",
  "pytorch-kinematics==0.7.6",
  "pytorch-seed==0.2.0",
  "pytz==2025.2",
  "pyvers==0.1.0",
  "pyyaml==6.0.3",
  "requests==2.32.5",
  "sapien==3.0.2",
  "scipy==1.15.3",
  "sentry-sdk==2.48.0",
  "setuptools==80.9.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "smmap==5.0.2",
  "stable-baselines3==2.7.1",
  "stack-data==0.6.3",
  "sympy==1.14.0",
  "tabulate==0.9.0",
  "tensordict==0.10.0",
  "toppra==0.6.3",
  "torch==2.9.1",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "transforms3d==0.4.2",
  "trimesh==4.10.1",
  "triton==3.5.1",
  "typeguard==4.4.4",
  "typer-slim==0.20.1",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "tyro==1.0.3",
  "tzdata==2025.3",
  "urllib3==2.6.2",
  "wandb==0.23.1",
  "wcwidth==0.2.14",
  "zipp==3.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "only-system"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.build.targets.sdist]
include = ["scripts", "configs", "README.md", "Track1_Simulation_Parameters.md", "project_require.md", "analysis_results.json"]
